# OpenGUI

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  INSTALL.html  build.sh  cflags.mak  clean.sh  compile.sh  config.mak  dist.sh  examples.sh  fgl.pc  install.sh  ostest.mak  ostest.sh  todo-sk.txt  uninstall.sh  version
bcc/: FGMesa.bpr  OpenGUI.bpgr  OpenGUI.bpr  bcc6prj.bpg  fgl.bpr  fgl.cbx  fgl16.bpr  fgl16.cbx  fgl32.bpf  fgl32.bpr  fgl32.cbx  tinycfg.bpr
doc/: OpenGUI ver_5_0.html  OpenGUI.faq  OpenGUI.lsm  OpenGUI.spec  bugs.txt  changes.txt  fastgl.dox  readme.txt  tinyxml_tutorial.html  tree.txt  wishes.txt
examples/: Makefile
examples/alpha/: alpha.bpr  alpha.cpp  alpha3.bpr
examples/bgroup/: bgroup.bpr  bgroup.cpp  bgroup3.bpr
examples/bitmap/: bitmap.bpr  bitmap.cpp  bitmap3.bpr
examples/buttons/: buttons.bpr  buttons.cpp  buttons3.bpr
examples/calc/: calc.bpr  calc.cpp  calc3.bpr
examples/cdialog/: cdialog.bpr  cdialog.cpp  cdialog3.bpr
examples/config/: bench.xml  config.cpp
examples/connect/: connect.bpr  connect.cpp  connect3.bpr
examples/cursor/: cursor.bpf  cursor.bpr  cursor.cpp  cursor3.bpr
examples/double/: double.bpr  double.cpp  double3.bpr
examples/editor/: editor.bpr  editor.cpp  editor3.bpr
examples/events/: events.bpr  events.cpp  events3.bpr
examples/fdialog/: fdialog.bpr  fdialog.cpp  fdialog3.bpr
examples/fgcolor/: fgcolor.cpp
examples/fgxtest/: fgxtest.cpp  fgxtest3.bpr  test1.xui  test2.xui
examples/font/: 12x24.cpp  font.bpr  font.cpp  font3.bpr
examples/fontsel/: fontsel.bpr  fontsel.cpp  fontsel3.bpr
examples/gears/: gears.cpp  gears16.bpr  gears163.bpr
examples/geartrain/: geartrain.cpp  gtrain.bpr  gtrain3.bpr
examples/gif/: gif.bpr  gif.cpp  gif3.bpr
examples/gradient/: gradient.bpr  gradient.cpp  gradient3.bpr
examples/hello/: OpenGUI  hello  hello.bpr  hello.cpp  hello.gdt  hello.gpr  hello3.bpr
examples/listbox/: listbox.bpr  listbox.cpp  listbox3.bpr
examples/mandel/: mandel.bpr  mandel.cpp  mandel3.bpr
examples/modal_dialog/: modal_dialog.cpp
examples/morph3d/: morph3d.bpr  morph3d.cpp  morph3d.options  morph3d3.bpr
examples/newapi/: newapi.bpr  newapi.cpp  newapi3.bpr
examples/pane/: pane.bpr  pane.cpp  pane3.bpr
examples/radiogroup/: radiogroup.cpp
examples/regress/: regress.cpp  regress3.bpr
kylix3/: FGMesa.bpr  Kylix3.bpg  Kylix3.desk  demo.bpf  demo.bpr  fgl.bpr  fgl16.bpr  fgl32.bpr  listbox2.cpp  tinycfg.bpr
mesa/: fglmesa.cpp  fglmesa.d  fglmesa.lo
other/: textto.c
pen/: dmc9512.cpp  dmc9512.h  pen_gunze.cpp  pen_gunze.h
rad/: changes.txt  makefile  rad.txt  rad_def.h  rad_gen.cpp  rad_main.cpp  rad_prj.cpp  rad_sym.h  rad_type.h  rgb.cc
rhide/: bench.cpp  main.gdt  main.gpr
src/: Makefile  _fastgl.h  config.h  detect.cpp  dll.cpp  dll.h  drivers.cpp  drivers.h  fastgl.cpp  fgapp.cpp  fgbase.cpp  fgbitmap.cpp  fgcolor.cpp  fgconcurency.cpp  fgcontrols.cpp  fgdrawbuffer.cpp  fgeditor.cpp  fgevent.cpp  fgfontmanager.cpp  fggradient.cpp  fglistbox.cpp  fgmatrix.cpp  fgpane.cpp  fgscheme.cpp  fgshape.cpp  fgtimer.cpp  fgttf.cpp  fgx.cpp  gif.h  listbox.cpp  resource.cpp  widgets.cpp
xml/: changes.txt  readme.dox  tinyxml.h  xmlconfig.cpp  xmlconfig.h
(+65 files in other folders)
